@@ -40,3 +40,10 @@ AM_CCASFLAGS   += -Xassembler -I$(top_srcdir)/exp-bbv/tests
 check_PROGRAMS += ll
 ll_SOURCES      = ll.S
 endif
+
+clone_test_CFLAGS	= $(AM_CFLAGS) @FLAG_NO_PIE@
+complex_rep_CFLAGS	= $(AM_CFLAGS) @FLAG_NO_PIE@
+fldcw_check_CFLAGS	= $(AM_CFLAGS) @FLAG_NO_PIE@
+ll_CFLAGS		= $(AM_CFLAGS) @FLAG_NO_PIE@
+million_CFLAGS		= $(AM_CFLAGS) @FLAG_NO_PIE@
+rep_prefix_CFLAGS	= $(AM_CFLAGS) @FLAG_NO_PIE@
